# accelerated-offloading

./: .gitignore  README.md  opencv_build.sh
src/: CMakeLists.txt  client_helpers.hpp  computation.cpp  computation.h  monitor.hpp  multi-client.py  proxy_helpers.hpp  rdma_client.cpp  rdma_client_helpers.hpp  rdma_common.cpp  rdma_common.h  rdma_proxy.cpp  rdma_server.cpp  rdma_server_helpers.hpp  trt_engine.cpp  trt_engine.h  utils.h  zmq_balancer.cpp  zmq_client.cpp  zmq_proxy.cpp  zmq_server.cpp
src/models/: get_onnx.py
